--- a/nginx.conf
+++ b/nginx.conf
@@ -1,62 +1,34 @@
-events { }
+server {
+	listen 80;
+	server_name swapify.fri.uniza.sk;  	
+	
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
+	
+	location / {	
+		return 301 https://$host$request_uri;
+	}   
+}
 
-http {
-
-  map $http_upgrade $connection_upgrade {
-      default upgrade;
-      ''      close;
-    }
-
-    for worker_processes  
-  
-    # upstream dotnetcore {  
-    #     server swapify: 3000;  
-    # }
-
-  server {
-    listen 80;
-    server_name http://3.121.231.86/;
-    return 301 http://3.121.231.86/$request_uri;
-         }
-
-   server {
-    listen 443 ssl;
-    server_name https://3.121.231.86/;
-    
-    # ssl_certificate /ssl/<your_ssl_cert.pem>;
-    # ssl_certificate_key /ssl/<your_ssl_private_key.key>;
-    
-    # access_log /var/log/nginx/data-access.log combined;
-
-    # location / {  
-    #         proxy_pass http://dotnetcore; # Home page for App1  
-    #     }
-
-    # location / {
-    #     root   /usr/share/nginx/html;
-    #     index  index.html index.htm;
-    #     try_files $uri $uri/ /index.html;
-    # }
-
-    # error_page   500 502 503 504  /50x.html;
-
-    # location = /50x.html {
-    #     root   /usr/share/nginx/html;
-    # }
-
-    location / {
-       try_files $uri $uri/ /index.html?$args;
-       proxy_pass http://:::80/;
-       proxy_set_header X-Real-IP  $remote_addr;
-       proxy_set_header X-Forwarded-For $remote_addr;
-       proxy_set_header Host $host;
-       proxy_set_header X-Forwarded-Proto $scheme;
-       proxy_redirect http://:::80/ $scheme://$http_host/;
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection $connection_upgrade;
-       proxy_read_timeout 20d;
-       proxy_buffering off;
-       }
-   }
+server {
+	listen 443 ssl;
+	server_name swapify.fri.uniza.sk;
+		
+	ssl_certificate /etc/letsencrypt/live/swapify.fri.uniza.sk/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/swapify.fri.uniza.sk/privkey.pem;
+	include /etc/letsencrypt/options-ssl-nginx.conf;
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	
+	location / {
+		proxy_pass http://swapify:5020;
+		proxy_http_version 1.1;
+		proxy_set_header	X-Real-IP	$remote_addr;
+		proxy_set_header	Upgrade	$http_upgrade;
+		proxy_set_header	Connection	keep-alive;
+		proxy_set_header	Host	$host;
+		proxy_cache_bypass	$http_upgrade;
+		proxy_set_header	X-Forwarded-For	$proxy_add_x_forwarded_for;
+		proxy_set_header	X-Forwarded-Proto	$scheme;
+  }
 }
