Changes after code review

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -31,6 +31,13 @@
     "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
     "URL": "https://www.google.com/recaptcha/api/siteverify"
   },
+  
+  "LdapSettings": {
+    "SecureSocketLayer": "false",
+	"BaseDN": "DC=fri,DC=uniza,DC=sk",
+	"HostName": "ldapbdc.fri.uniza.sk",
+	"Port": "389"
+  },
 
   "IdentitySettings": {
     "RequireDigit": "true",
