--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -44,6 +44,7 @@
     "mlcm": "0.0.3",
     "object-assign": "4.1.0",
     "react": "^16.8.3",
+    "react-color": "^2.19.3",
     "react-dom": "^16.8.3",
     "react-google-recaptcha": "^2.1.0",
     "react-onclickoutside": "^6.7.1",
