--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -9,7 +9,7 @@
   },
   "EnvironmentSettings": {
     "ASPNETCORE_ENVIRONMENT": "Production",
-    "JwtSecret": "CchangeThisJWTSecreeeetPleasse",
+    "JwtSecret": "##JWTKEY##",
     "BaseUrl": "http://3.121.231.86:80/"
   },
   "SwapifyDatabaseSettings": {
