--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,22 @@ services:
    dockerfile: Dockerfile
   image: swapify-app
   container_name: swapify
-  volumes:   
+  volumes:
+   # - /home/ubuntu/Swapify/:
    - ./logs:/app/logs
   restart: unless-stopped
   expose:
-   - 5020   
+   - 5020
+   # - 443:443
+   # - 0.0.0.0:3000:3000
   environment:
    - ASPNETCORE_ENVIRONMENT=Production
    - ASPNETCORE_URLS=http://+:5020
    - BaseUrl=http://3.121.231.86:80
-   - JwtSecret=CchangOrDNChanngSecr
-   - NODE_ENV=production  
+   - JwtSecret=##JWTKEY##   
+   - NODE_ENV=production
+  #links:
+   #- db
   depends_on:
    - mongodb
   links:
@@ -31,6 +36,8 @@ services:
   image: nginx
   container_name: nginx
   volumes:
+   - /home/ubuntu/ssl/privkey.pem:/etc/ssl/private/privkey.pem
+   - /home/ubuntu/ssl/fullchain.pem:/etc/ssl/private/fullchain.pem   
    - /home/ubuntu/Swapify/nginx.conf:/etc/nginx/conf.d/default.conf
    - ./certbot/conf:/etc/letsencrypt
    - ./certbot/www:/var/www/certbot
