--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -65,21 +65,21 @@ jobs:
         find: "##FEEDBACK_MAIL##"
         replace: "${{ secrets.FEEDBACK_MAIL }}"
         include: "appsettings.json"
-   - name: Set up QEMU
-     uses: docker/setup-qemu-action@v1
-   - name: Set up Docker Buildx
-     uses: docker/setup-buildx-action@v1
-   - name: Login to DockerHub
-     uses: docker/login-action@v1 
-     with:
-      username: branoswaptest
-      password: ${{ secrets.DOCKERHUB_PASSWORD }}
-   - name: Build and push
-     id: docker_build
-     uses: docker/build-push-action@v2
-     with:
-      push: true
-      tags: branoswaptest/swapify-app
+#   - name: Set up QEMU
+#     uses: docker/setup-qemu-action@v1
+#   - name: Set up Docker Buildx
+#     uses: docker/setup-buildx-action@v1
+#   - name: Login to DockerHub
+#     uses: docker/login-action@v1 
+#     with:
+#      username: branoswaptest
+#      password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#   - name: Build and push
+#     id: docker_build
+#     uses: docker/build-push-action@v2
+#     with:
+#      push: true
+#      tags: branoswaptest/swapify-app
 #   - name: Setup Node.js (NPM)
 #     uses: actions/setup-node@v2
 #     with:
@@ -88,7 +88,6 @@ jobs:
 #         uses: actions/setup-node@v2
 #         with:
 #           node-version: '12'
-
 #   - name: Build_and_push
 #     run: |
 #        docker login --username branoswaptest --password ${{ secrets.DOCKERHUB_PASSWORD }} docker.io
