--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -88,12 +88,12 @@ jobs:
 #         uses: actions/setup-node@v2
 #         with:
 #           node-version: '12'
-#   - name: Build_and_push
-#     run: |
-#        docker login --username branoswaptest --password ${{ secrets.DOCKERHUB_PASSWORD }} docker.io
-#        docker build --tag branoswaptest/swapify-app .
-#        docker push branoswaptest/swapify-app
-#        docker logout branoswaptest/swapify-app        
+   - name: Build_and_push
+     run: |
+        docker login --username branoswaptest --password ${{ secrets.DOCKERHUB_PASSWORD }} docker.io
+        docker build --tag branoswaptest/swapify-app .
+        docker push branoswaptest/swapify-app
+        docker logout branoswaptest/swapify-app        
    - name: Configure_SSH
      run: |
           mkdir -p ~/.ssh/
