--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -10,7 +10,7 @@
   "EnvironmentSettings": {
     "ASPNETCORE_ENVIRONMENT": "Production",
     "JwtSecret": "##JWTKEY##",
-    "BaseUrl": "http://3.121.231.86:80/"
+    "BaseUrl": "https://swapify.fri.uniza.sk/"
   },
   "SwapifyDatabaseSettings": {
     "ConnectionString": "mongodb://mongodb:27017",
