--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   environment:
    - ASPNETCORE_ENVIRONMENT=Production
    - ASPNETCORE_URLS=http://+:5020
-   - BaseUrl=http://3.121.231.86:80
+   - BaseUrl=https://swapify.fri.uniza.sk
    - JwtSecret=##JWTKEY##
    - NODE_ENV=production  
   depends_on:
