--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   image: nginx
   container_name: nginx
   volumes:
-   - /home/ubuntu/Swapify/nginx.conf:/etc/nginx/conf.d/default.conf
+   - ./nginx.conf:/etc/nginx/conf.d/default.conf
    - ./certbot/conf:/etc/letsencrypt
    - ./certbot/www:/var/www/certbot
   ports:
