317_dest_directory_fixed

--- a/.github/workflows/github_autodeploy_action.yml
+++ b/.github/workflows/github_autodeploy_action.yml
@@ -108,7 +108,7 @@ jobs:
      uses: garygrossgarten/github-action-scp@release
      with:
       local: filesToCopy
-      remote: /home/ubuntu/Swapify/mypassfile.txt
+      remote: /home/ubuntu/Swapify
       host: ${{ secrets.HOST }}
       username: ubuntu
       privateKey: ${{ secrets.PRIVATE_KEY}}
