resolved code review hates
moved logic to calendar service, configure calendar service, added start and end dates to appconfig file, changed reccuring events from NOW to +13 weeks to from NOW to End of semester

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -51,6 +51,17 @@
     "RequireUniqueEmail": "true"
   },
 
+  "CalendarSettings" : {
+  	"StartWinterDay" : 28,
+  	"StartWinterMonth" : 9,
+  	"EndWinterDay" : 18,
+  	"EndWinterMonth" : 12,
+  	"StartSummerDay" : 22,
+  	"StartSummerMonth" : 2,
+  	"EndSummerDay" : 21,
+  	"EndSummerMonth" : 5
+  },
+
   "AppSettings": {
     "TAPI_URL": "https://nic.uniza.sk/webservices",
     "ScheduleContentURL": "getUnizaScheduleContent.php",
