--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -52,14 +52,10 @@
   },
 
   "CalendarSettings" : {
-  	"StartWinterDay" : 28,
-  	"StartWinterMonth" : 9,
-  	"EndWinterDay" : 18,
-  	"EndWinterMonth" : 12,
-  	"StartSummerDay" : 22,
-  	"StartSummerMonth" : 2,
-  	"EndSummerDay" : 21,
-  	"EndSummerMonth" : 5
+    "StartWinter" : "2020-09-28T00:00:00.000000",
+    "EndWinter" : "2020-12-18T00:00:00.000000",
+    "StartSummer" : "2021-02-22T00:00:00.000000",
+    "EndSummer" : "2021-05-21T00:00:00.000000",
   },
 
   "AppSettings": {
