--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -33,7 +33,7 @@
   },
   
   "LdapSettings": {
-    "SecureSocketLayer": "true",
+    "SecureSocketLayer": "false",
 	"BaseDN": "DC=fri,DC=uniza,DC=sk",
 	"HostName": "ldapbdc.fri.uniza.sk",
 	"Port": "389"
