--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,8 @@ server {
 	}
 	
 	location / {	
-		return 301 https://$host$request_uri;
+		#return 301 https://$host$request_uri;
+		proxy_pass http://swapify:5020;
 	}   
 }
 
