--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,7 @@ server {
 	}
 	
 	location / {	
-		#return 301 https://$host$request_uri;
-		proxy_pass http://swapify:443;
+		return 301 https://$host$request_uri;
 	}   
 }
 
