--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -15,5 +15,14 @@
   "SwapifyDatabaseSettings": {
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "SwapifyDB"
+  },
+  "LdapSettings": {
+    "SecureSocketLayer": "true",
+	"BaseDN": "DC=fri,DC=uniza,DC=sk",
+	"HostName": "ldapbdc.fri.uniza.sk",
+	"Port": "636"
+  },
+  "PathSettings": {
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json"
   }
 }
