--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -11,32 +11,21 @@
         "Default": "Warning"
       }
     }
-  },
-  "PathSettings": {
-    "CoursesJsonPath": "..\\CoursesParser\\ActualCoursesJson\\courses_2020_1_29.json"
-  },
-
+  },  
   "MailingSettings": {
     "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
-    "SMTPServer": "##SMTP_SERVER##",
-    "SMTPPort": "##SMTP_PORT##",
+    "SMTPServer": "smtp_server@email.toberemoved.com",
+    "SMTPPort": "465",
     "Username": "##MAIL_USERNAME##",
-    "SenderEmail": "##SENDER_EMAIL##",
+    "SenderEmail": "sender.toberemoved@email.com",
     "SenderDisplayName": "Swapify",
     "Password": "##MAIL_PASSWORD##",
     "FeedbackEmail": "##FEEDBACK_MAIL##"
   },
   
   "RecaptchaSettings": {
-    "PrivateKey": "##RECAPTCHA_BACK_END_KEY##",
+    "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
     "URL": "https://www.google.com/recaptcha/api/siteverify"
-  },
-  
-  "LdapSettings": {
-    "SecureSocketLayer": "true",
-	"BaseDN": "DC=fri,DC=uniza,DC=sk",
-	"HostName": "ldapbdc.fri.uniza.sk",
-	"Port": "636"
   },
 
   "IdentitySettings": {
