--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,5 +6,14 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "LdapSettings": {
+    "SecureSocketLayer": "false",
+	"BaseDN": "DC=fri,DC=uniza,DC=sk",
+	"HostName": "ldapbdc.fri.uniza.sk",
+	"Port": "389"
+  },
+  "PathSettings": {
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json"
   }
 }
