--- a/WebAPI/nlog.Development.config
+++ b/WebAPI/nlog.Development.config
@@ -3,16 +3,20 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Warn"
-      internalLogFile="nlog-internal.log">
+      internalLogFile="/app/logs/nlog-internal-${shortdate}.log">
   <!--See documentation:-->
   <!-- https://github.com/nlog/NLog/wiki/Configuration-file -->
   <targets>
     <target xsi:type="Console" name="console"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
+    <target xsi:type="File" name="file" fileName="/app/logs/${shortdate}.log"
+            layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
   </targets>
   <rules>
     <logger name="*" minlevel="Trace" writeTo="console" />
+    <logger name="*" minlevel="Trace" writeTo="file" />
     <!--Skip non-critical Microsoft logs-->
     <logger name="Microsoft.*" maxLevel="Info" final="true" />
   </rules>
 </nlog>
+
