Migrated to .NET 5

--- a/WebAPI/Properties/launchSettings.json
+++ b/WebAPI/Properties/launchSettings.json
@@ -24,6 +24,11 @@
         "BaseUrl": "https://swapify.fri.uniza.sk/",
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
