--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,25 @@
-.dockerignore
-.editorconfig
-.env*
-.git
-.gitignore
-.travis.yml
-.vs
-.vscode
-docker-compose.yml
-docker-compose.*.yml
-logs
-*/bin
-*/obj
-*/node_modules
+**/.classpath
+**/.dockerignore
+**/.env
+**/.git
+**/.gitignore
+**/.project
+**/.settings
+**/.toolstarget
+**/.vs
+**/.vscode
+**/*.*proj.user
+**/*.dbmdl
+**/*.jfm
+**/azds.yaml
+**/bin
+**/charts
+**/docker-compose*
+**/Dockerfile*
+**/node_modules
+**/npm-debug.log
+**/obj
+**/secrets.dev.yaml
+**/values.dev.yaml
+LICENSE
+README.md
