Startup refactor + integration with local decker settings

--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -13,7 +13,7 @@
     "BaseUrl": "https://swapify.fri.uniza.sk/"
   },
   "SwapifyDatabaseSettings": {
-    "ConnectionString": "mongodb://mongodb:27017",
+    "ConnectionString": "mongodb://mongodb:27017/",
     "DatabaseName": "SwapifyDB"
   },
   "LdapSettings": {
@@ -23,6 +23,7 @@
 	"Port": "636"
   },
   "PathSettings": {
-    "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json"
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json",
+    "WwwRootPath": "wwwroot"
   }
 }
