--- a/WebAPI/appsettings.DevelopmentVS.json
+++ b/WebAPI/appsettings.DevelopmentVS.json
@@ -1,4 +1,10 @@
 {
+  "LdapSettings": {
+    "SecureSocketLayer": "false",
+    "BaseDN": "DC=fri,DC=uniza,DC=sk",
+    "HostName": "ldapbdc.fri.uniza.sk",
+    "Port": "389"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -7,13 +13,11 @@
       "Microsoft": "Information"
     }
   },
-  "LdapSettings": {
-    "SecureSocketLayer": "false",
-	"BaseDN": "DC=fri,DC=uniza,DC=sk",
-	"HostName": "ldapbdc.fri.uniza.sk",
-	"Port": "389"
-  },
   "PathSettings": {
-    "CoursesJsonPath": "..\\Tests\\FixedDB\\courses_2020_1_29.json"
+    "CoursesJsonPath": "..\\Tests\\FixedDB\\courses_2020_1_29.json",
+    "WwwRootPath": "wwwroot"
+  },
+  "SwapifyDatabaseSettings": {
+    "DatabaseName": "Swapify"
   }
 }
