--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,45 +1,4 @@
 {
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  },  
-  "MailingSettings": {
-    "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
-    "SMTPServer": "smtp_server@email.toberemoved.com",
-    "SMTPPort": "465",
-    "Username": "##MAIL_USERNAME##",
-    "SenderEmail": "sender.toberemoved@email.com",
-    "SenderDisplayName": "Swapify",
-    "Password": "##MAIL_PASSWORD##",
-    "FeedbackEmail": "##FEEDBACK_MAIL##"
-  },
-  
-  "RecaptchaSettings": {
-    "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
-    "URL": "https://www.google.com/recaptcha/api/siteverify"
-  },
-
-  "IdentitySettings": {
-    "RequireDigit": "true",
-    "RequiredLength": "8",
-    "RequireNonAlphanumeric": "false",
-    "RequireUppercase": "true",
-    "RequireLowercase": "true",
-    "RequireConfirmedEmail": "true",
-    "DefaultLockoutTimeSpan": "30",
-    "MaxFailedAccessAttempts": "10",
-    "RequireUniqueEmail": "true"
-  },
-
   "AppSettings": {
     "TAPI_URL": "https://nic.uniza.sk/webservices",
     "ScheduleContentURL": "getUnizaScheduleContent.php",
@@ -57,5 +16,43 @@
         "Month": 7
       }
     }
+  },
+  "IdentitySettings": {
+    "RequireDigit": "true",
+    "RequiredLength": "8",
+    "RequireNonAlphanumeric": "false",
+    "RequireUppercase": "true",
+    "RequireLowercase": "true",
+    "RequireConfirmedEmail": "true",
+    "DefaultLockoutTimeSpan": "30",
+    "MaxFailedAccessAttempts": "10",
+    "RequireUniqueEmail": "true"
+  },
+  "Logging": {
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "IncludeScopes": false
+  },
+  "MailingSettings": {
+    "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
+    "SMTPServer": "mail.kst.fri.uniza.sk",
+    "SMTPPort": "465",
+    "Username": "swapify",
+    "SenderEmail": "swapify@kst.fri.uniza.sk",
+    "SenderDisplayName": "Swapify",
+    "Password": "MxQ14#8a",
+    "FeedbackEmail": "swapifyteam@gmail.com"
+  },
+  "RecaptchaSettings": {
+    "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
+    "URL": "https://www.google.com/recaptcha/api/siteverify"
   }
 }
