--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -43,13 +43,13 @@
   },
   "MailingSettings": {
     "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
-    "SMTPServer": "mail.kst.fri.uniza.sk",
+    "SMTPServer": "smtp_server@email.toberemoved.com",
     "SMTPPort": "465",
-    "Username": "swapify",
-    "SenderEmail": "swapify@kst.fri.uniza.sk",
+    "Username": "##MAIL_USERNAME##",
+    "SenderEmail": "sender.toberemoved@email.com",
     "SenderDisplayName": "Swapify",
-    "Password": "MxQ14#8a",
-    "FeedbackEmail": "swapifyteam@gmail.com"
+    "Password": "##MAIL_PASSWORD##",
+    "FeedbackEmail": "##FEEDBACK_MAIL##"
   },
   "RecaptchaSettings": {
     "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
