static files path changed

--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -24,6 +24,6 @@
   },
   "PathSettings": {
     "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json",
-    "WwwRootPath": "wwwroot"
+    "WwwRootPath": "/app/wwwroot"
   }
 }
