--- a/.github/workflows/github_autodeploy_action.yml
+++ b/.github/workflows/github_autodeploy_action.yml
@@ -74,6 +74,7 @@ jobs:
      uses: docker/build-push-action@v2
      with:
       context: .
+      file:/Dockerfile
       push: true
       tags: swapifyapp/swapify-app
    - name: Configure SSH and prepare files to be copied
@@ -85,8 +86,7 @@ jobs:
           echo "${{ secrets.DOCKERHUB_PASSWORD }}" > filesToCopy/mypassfile.txt
           cp docker-compose.production.yml filesToCopy/docker-compose.yml
           cp nginx.conf filesToCopy/nginx.conf
-          cp init-letsencrypt.sh filesToCopy/init-letsencrypt.sh
-          cp Dockerfile filesToCopy/Dockerfile
+          cp init-letsencrypt.sh filesToCopy/init-letsencrypt.sh          
           cat >>~/.ssh/config <<END
           Host aws
             HostName $SSH_HOST
